--- a/Code/src/index.css
+++ b/Code/src/index.css
@@ -15,3 +15,12 @@ code {
 * {
   font-family: "Open Sans Condensed", sans-serif;
 }
+
+html {
+  height: 100%;
+  overflow: auto;
+}
+body {
+  height: 100%;
+  overflow: auto;
+}
